fix spacing for small screen sizes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@ $navbar-top: 3.5rem;
     z-index: 10;
     background: #fff;
     box-shadow: 0px 0px 5px -2px #000;
-    color: #fc6262;
+    color: #687ffd;
     &__title {
       font-size: 1.5rem;
       font-family: "Fredoka One", cursive;
