--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,3 @@ pre {
   padding: 0.5rem 1rem;
   white-space: break-spaces;
 }
-code {
-}
